# pearson-e-library-downloader

./: .gitignore  LICENSE  README.md  build-epub.sh  downloader.py  pyproject.toml  renderer.py  tree.txt
prototypes/: _downloader_prototype.py  _merger_prototype.py
